# fisco-tech

./: db.sqlite3  json_struct.json  pyproject.toml
apps/: urls.py
apps/nfse/: apps.py  nfse_dict_return.py  nfse_service.py  urls.py  views.py
apps/nfse/migrations/: 0001_initial.py  0002_alter_infonfsemodel_data_emissao.py  0002_remove_prestadormodel_endereco_and_more.py
apps/nfse/models/: nfse_model.py  nfse_model_old.py  validators.py
apps/nfse/serializers/: nse_serializers.py
apps/nfse/services/: Nfse.py  NfseAbrasXML.py  nfse_service.py
apps/utils/: XmlUtil.py  certificate.pem  private_key.pem
config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: etree_xsd.py  v2-02.xsd
