[tool.poetry]
name = "fisco-tech"
version = "0.1.0"
description = ""
authors = ["Gustavo Monteiro <monteiro@tins.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-rest-framework = "^0.1.0"
lxml = "^5.1.0"
xmlschema = "^3.0.1"
drf-writable-nested = "^0.7.0"
dicttoxml = "^1.7.16"
dicttoxml2 = "^2.1.0"
drf-standardized-errors = "^0.12.6"
markdown = "^3.6"
xmltodict = "^0.13.0"
signxml = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
